gcc/testsuite/g++.dg/ext/stmtexpr9.C
@@ -1,0 +1,8 @@
+// PR c++/28899
+// { dg-options "" }
+
+void f()
+{
+  unsigned l, l1;
+  l1 = l = ({ unsigned __v; __v; });
+}
